# neuro-san-pm

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
apps/: __init__.py  slack_bridge.py
coded_tools/: __init__.py
coded_tools/colleague/: __init__.py  _gmail_client.py  _runtime.py  _slack_client.py  colleague_state.py  github_kanban_snapshot.py  github_project_reader.py  github_public_read.py  gmail_read.py  gmail_recipients.py  gmail_search.py  gmail_send.py  kanban_snapshot.py  run_finalizer.py  runtime_config.py  slack_event_queue.py  slack_inbox.py  slack_inbox_batch.py  slack_post.py  slack_reply_ledger.py
config/: llm_config.hocon  plugins.hocon
docs/: computer-use.md  first-run-and-tuning.md  gmail.md  operations.md  security.md  slack.md  tooling-decisions.md
mcp/: mcp_info.hocon
registries/: manifest.hocon  product_colleague.hocon
registries/optional/: computer_use_researcher.hocon
scripts/: __init__.py  check_config.py  setup_gmail.py  slack_availability.py  slack_event_admin.py  start_server.py  trigger_event.py
tests/: test_colleague_state.py  test_github_kanban_snapshot.py  test_github_project_reader.py  test_github_public_read.py  test_gmail_recipients.py  test_gmail_tools.py  test_hocon_contract.py  test_kanban_snapshot.py  test_run_finalizer.py  test_runtime_config.py  test_slack_availability.py  test_slack_bridge.py  test_slack_tools.py  test_start_server.py
